fixed font size and vertical align for navbar items

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .navbar{
     width: 100%;
-    height: 80px;
+    height: 90px;
     background-color: rgb(192, 191, 191);
     position:fixed;  
     z-index: 4;
@@ -19,14 +19,13 @@
 }
 
 .logo{
-    font-size: 50px;
+    font-size: 60px;
     font-weight: bold;
     font-family: 'Dancing Script', cursive;
-    margin-top: -12px;
+    margin-top: -15px;
     margin-left: 20px;
-    display: center;
     color: black;
-    margin-right: 150px;
+    margin-right: 100px;
 }
 
 .logo:hover{
@@ -51,8 +50,11 @@
 }
 
 .icon{
-    margin-right: 25px;
+    margin-right: 20px;
     align-items: center;
     color: black;
     text-decoration: none;
+    font-size: 20px;
+    vertical-align: middle;
+    
 }
